Create new Content APIs GET and PUT
